# llm-pricing-simulator

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  dashboard.py  main.py  pyproject.toml  report.md  run_simulation.py  select_top_models.py
data/: overrides.json  price_cache.json
results/: KEY_INSIGHTS.md  jtbd_comparison.md
scenarios/: example_dedicated_models.json  jtbd_1_brand_category.json  jtbd_2_alerts_high_frequency.json  jtbd_3_model_comparison.json  jtbd_4_competitor_tracking.json  template.json  test_battery.json  test_battery_many_models.json
src/: __init__.py  calculator.py  models.py  price_fetcher.py  reporter.py  simulator.py
