[project]
name = "llm-pricing-simulator"
version = "0.1.0"
description = "LLM pricing simulator for cost estimation and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.9.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
]
